# memobjects

./: CMakeLists.txt  README.md  main.cpp  memobjects.h
examples/: single-message.cpp
